--- a/tablebooking/index.html
+++ b/tablebooking/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQRU9VEyudDeQZvjG6FATSeHB2oKk54k2cV0A&s" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
